--- a/mybibliography.bib
+++ b/mybibliography.bib
@@ -68,15 +68,6 @@
   organization = {IEEE}
 }
 
-@inproceedings{sahawneh2008development,
-  title        = {Development and calibration of low cost MEMS IMU for UAV applications},
-  author       = {Sahawneh, L and Jarrah, MA},
-  booktitle    = {2008 5th International Symposium on Mechatronics and Its Applications},
-  pages        = {1--9},
-  year         = {2008},
-  organization = {IEEE}
-}
-
 @article{dewhirst2016improving,
   title     = {Improving the accuracy of estimates of animal path and travel distance using GPS drift-corrected dead reckoning},
   author    = {Dewhirst, Oliver P and Evans, Hannah K and Roskilly, Kyle and Harvey, Richard J and Hubel, Tatjana Y and Wilson, Alan M},
@@ -117,17 +108,6 @@
   pages     = {41--48},
   year      = {1991},
   publisher = {SIAM}
-}
-
-@article{hemingway2018perspectives,
-  title     = {Perspectives on Euler angle singularities, gimbal lock, and the orthogonality of applied forces and applied moments},
-  author    = {Hemingway, Evan G and O'Reilly, Oliver M},
-  journal   = {Multibody System Dynamics},
-  volume    = {44},
-  number    = {1},
-  pages     = {31--56},
-  year      = {2018},
-  publisher = {Springer}
 }
 
 @inproceedings{alaimo2013comparison,
@@ -560,6 +540,7 @@
   year         = {2018},
   organization = {International Society for Optics and Photonics}
 }
+
 @inproceedings{diaz2015evaluation,
   title        = {Evaluation of AHRS algorithms for inertial personal localization in industrial environments},
   author       = {Diaz, Estefania Munoz and de Ponte M{\"u}ller, Fabian and Jim{\'e}nez, Antonio R and Zampella, Francisco},
@@ -576,4 +557,700 @@
   volume  = {25},
   pages   = {113--118},
   year    = {2010}
+}
+
+@incollection{cai2011coordinate,
+  title     = {Coordinate systems and transformations},
+  author    = {Cai, Guowei and Chen, Ben M and Lee, Tong Heng},
+  booktitle = {Unmanned rotorcraft systems},
+  pages     = {23--34},
+  year      = {2011},
+  publisher = {Springer}
+}
+
+@article{laundal2017magnetic,
+  title     = {Magnetic coordinate systems},
+  author    = {Laundal, Karl Magnus and Richmond, Arthur D},
+  journal   = {Space Science Reviews},
+  volume    = {206},
+  number    = {1-4},
+  pages     = {27--59},
+  year      = {2017},
+  publisher = {Springer}
+}
+
+@article{boucher2001itrs,
+  title     = {ITRS, PZ-90 and WGS 84: current realizations and the related transformation parameters},
+  author    = {Boucher, Claude and Altamimi, Zuheir},
+  journal   = {Journal of Geodesy},
+  volume    = {75},
+  number    = {11},
+  pages     = {613--619},
+  year      = {2001},
+  publisher = {Springer}
+}
+
+@article{soler1988coordinate,
+  title     = {Coordinate systems used in geodesy: Basic definitions and concepts},
+  author    = {Soler, Tomas and Hothem, Larry D},
+  journal   = {Journal of surveying engineering},
+  volume    = {114},
+  number    = {2},
+  pages     = {84--97},
+  year      = {1988},
+  publisher = {American Society of Civil Engineers}
+}
+
+@article{huynh2009metrics,
+  title     = {Metrics for 3D rotations: Comparison and analysis},
+  author    = {Huynh, Du Q},
+  journal   = {Journal of Mathematical Imaging and Vision},
+  volume    = {35},
+  number    = {2},
+  pages     = {155--164},
+  year      = {2009},
+  publisher = {Springer}
+}
+
+@article{premerlani2009direction,
+  title   = {Direction cosine matrix imu: Theory},
+  author  = {Premerlani, William and Bizard, Paul},
+  journal = {Diy Drone: Usa},
+  pages   = {13--15},
+  year    = {2009}
+}
+
+@book{choukroun2003novel,
+  title     = {Novel methods for attitude determination using vector observations},
+  author    = {Choukroun, Daniel},
+  year      = {2003},
+  publisher = {Technion-Israel Institute of Technology, Faculty of Aerospace Engineering}
+}
+
+@article{wang2017online,
+  title     = {Online state of charge estimation for the aerial lithium-ion battery packs based on the improved extended Kalman filter method},
+  author    = {Wang, Shunli and Fernandez, Carlos and Shang, Liping and Li, Zhanfeng and Li, Jianchao},
+  journal   = {Journal of Energy Storage},
+  volume    = {9},
+  pages     = {69--83},
+  year      = {2017},
+  publisher = {Elsevier}
+}
+
+@inproceedings{srinivas2017overview,
+  title        = {Overview of architecture for GPS-INS integration},
+  author       = {Srinivas, P and Kumar, Anil},
+  booktitle    = {2017 Recent Developments in Control, Automation \& Power Engineering (RDCAPE)},
+  pages        = {433--438},
+  year         = {2017},
+  organization = {IEEE}
+}
+
+@article{diebel2006representing,
+  title   = {Representing attitude: Euler angles, unit quaternions, and rotation vectors},
+  author  = {Diebel, James},
+  journal = {Matrix},
+  volume  = {58},
+  number  = {15-16},
+  pages   = {1--35},
+  year    = {2006}
+}
+
+@article{bar1987recursive,
+  title   = {Recursive attitude determination from vector observations Euler angle estimation},
+  author  = {Bar-Itzhack, Itzhack Y and Idan, M},
+  journal = {Journal of Guidance, Control, and Dynamics},
+  volume  = {10},
+  number  = {2},
+  pages   = {152--157},
+  year    = {1987}
+}
+
+@article{spring1986euler,
+  title     = {Euler parameters and the use of quaternion algebra in the manipulation of finite rotations: a review},
+  author    = {Spring, Kerry W},
+  journal   = {Mechanism and machine theory},
+  volume    = {21},
+  number    = {5},
+  pages     = {365--373},
+  year      = {1986},
+  publisher = {Elsevier}
+}
+
+@inproceedings{marins2001extended,
+  title        = {An extended Kalman filter for quaternion-based orientation estimation using MARG sensors},
+  author       = {Marins, Jo{\~a}o Lu{\'\i}s and Yun, Xiaoping and Bachmann, Eric R and McGhee, Robert B and Zyda, Michael J},
+  booktitle    = {Proceedings 2001 IEEE/RSJ International Conference on Intelligent Robots and Systems. Expanding the Societal Role of Robotics in the the Next Millennium (Cat. No. 01CH37180)},
+  volume       = {4},
+  pages        = {2003--2011},
+  year         = {2001},
+  organization = {IEEE}
+}
+
+@article{hemingway2018perspectives,
+  title     = {Perspectives on Euler angle singularities, gimbal lock, and the orthogonality of applied forces and applied moments},
+  author    = {Hemingway, Evan G and O'Reilly, Oliver M},
+  journal   = {Multibody System Dynamics},
+  volume    = {44},
+  number    = {1},
+  pages     = {31--56},
+  year      = {2018},
+  publisher = {Springer}
+}
+
+@incollection{mcconnell1967kinematics,
+  title     = {KINEMATICS OF A THREE-AXIS GIMBAL SYSTEM},
+  author    = {MCCONNELL, KENNETH G},
+  booktitle = {Developments in Theoretical and Applied Mechanics},
+  pages     = {515--541},
+  year      = {1967},
+  publisher = {Elsevier}
+}
+
+@article{grado1960solution,
+  title     = {A solution to the euler angle transformation equations},
+  author    = {Grado, Gilbert R},
+  journal   = {IRE Transactions on Electronic Computers},
+  number    = {3},
+  pages     = {362--369},
+  year      = {1960},
+  publisher = {IEEE}
+}
+
+@inproceedings{mukundan2002quaternions,
+  title     = {Quaternions: From classical mechanics to computer graphics, and beyond},
+  author    = {Mukundan, Ramakrishnan},
+  booktitle = {Proceedings of the 7th Asian Technology conference in Mathematics},
+  pages     = {97--105},
+  year      = {2002}
+}
+
+@article{lee2008representing,
+  title     = {Representing rotations and orientations in geometric computing},
+  author    = {Lee, Jehee},
+  journal   = {IEEE Computer Graphics and Applications},
+  volume    = {28},
+  number    = {2},
+  pages     = {75--83},
+  year      = {2008},
+  publisher = {IEEE}
+}
+
+@inproceedings{fresk2013full,
+  title        = {Full quaternion based attitude control for a quadrotor},
+  author       = {Fresk, Emil and Nikolakopoulos, George},
+  booktitle    = {2013 European control conference (ECC)},
+  pages        = {3864--3869},
+  year         = {2013},
+  organization = {IEEE}
+}
+
+@article{valenti2015keeping,
+  title     = {Keeping a good attitude: A quaternion-based orientation filter for IMUs and MARGs},
+  author    = {Valenti, Roberto G and Dryanovski, Ivan and Xiao, Jizhong},
+  journal   = {Sensors},
+  volume    = {15},
+  number    = {8},
+  pages     = {19302--19330},
+  year      = {2015},
+  publisher = {Multidisciplinary Digital Publishing Institute}
+}
+
+@article{bar1985attitude,
+  title     = {Attitude determination from vector observations: Quaternion estimation},
+  author    = {Bar-Itzhack, IY and Oshman, Yaakov},
+  journal   = {IEEE Transactions on Aerospace and Electronic Systems},
+  number    = {1},
+  pages     = {128--136},
+  year      = {1985},
+  publisher = {IEEE}
+}
+
+@inproceedings{salehi2013low,
+  title        = {A low-cost and light-weight motion tracking suit},
+  author       = {Salehi, Sarvenaz and Bleser, Gabriele and Schmitz, Norbert and Stricker, Didier},
+  booktitle    = {2013 IEEE 10th International Conference on Ubiquitous Intelligence and Computing and 2013 IEEE 10th International Conference on Autonomic and Trusted Computing},
+  pages        = {474--479},
+  year         = {2013},
+  organization = {IEEE}
+}
+
+@article{li2011calibration,
+  title     = {Calibration and Interrelated Factors Analysis of IMU for Spacecraft},
+  author    = {Li, Bin and Zhang, Qiang},
+  journal   = {Computer Measurement \& Control},
+  volume    = {19},
+  number    = {8},
+  pages     = {1885--1888},
+  year      = {2011},
+  publisher = {Magazine Agency of Computer Measurement \& Control, No. 8 Fucheng Road~…}
+}
+
+@book{haberberger2016imu,
+  title     = {An IMU-based spacecraft navigation architecture using a robust multi-sensor fault detection scheme},
+  author    = {Haberberger, Samuel J},
+  year      = {2016},
+  publisher = {Missouri University of Science and Technology}
+}
+
+@article{farhangian2021opportunistic,
+  title     = {Opportunistic in-flight INS alignment using LEO satellites and a rotatory IMU platform},
+  author    = {Farhangian, Farzan and Benzerrouk, Hamza and Landry, Rene},
+  journal   = {Aerospace},
+  volume    = {8},
+  number    = {10},
+  pages     = {280},
+  year      = {2021},
+  publisher = {Multidisciplinary Digital Publishing Institute}
+}
+
+@article{lu2020orbit,
+  title     = {On-Orbit calibration method for redundant IMU based on satellite navigation \& star sensor information fusion},
+  author    = {Lu, Jiazhen and Hu, Maoqing and Yang, Yanqiang and Dai, Minpeng},
+  journal   = {IEEE Sensors Journal},
+  volume    = {20},
+  number    = {9},
+  pages     = {4530--4543},
+  year      = {2020},
+  publisher = {IEEE}
+}
+
+@inproceedings{sahawneh2008development,
+  title        = {Development and calibration of low cost MEMS IMU for UAV applications},
+  author       = {Sahawneh, L and Jarrah, MA},
+  booktitle    = {2008 5th International Symposium on Mechatronics and Its Applications},
+  pages        = {1--9},
+  year         = {2008},
+  organization = {IEEE}
+}
+
+@article{eling2015real,
+  title     = {Real-time single-frequency GPS/MEMS-IMU attitude determination of lightweight UAVs},
+  author    = {Eling, Christian and Klingbeil, Lasse and Kuhlmann, Heiner},
+  journal   = {Sensors},
+  volume    = {15},
+  number    = {10},
+  pages     = {26212--26235},
+  year      = {2015},
+  publisher = {Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{allen2013telemedicine,
+  title        = {Telemedicine assessment of fall risk using wireless sensors},
+  author       = {Allen, Brandon and Derveloy, Robert and Fell, Nancy and Gasior, Wade and Yu, George and Sartipi, Mina},
+  booktitle    = {2013 IEEE International Conference on Sensing, Communications and Networking (SECON)},
+  pages        = {245--247},
+  year         = {2013},
+  organization = {IEEE}
+}
+
+@article{giansanti2009toward,
+  title     = {Toward the design of a wearable system for fall-risk detection in telerehabilitation},
+  author    = {Giansanti, Daniele and Morelli, Sandra and Maccioni, Giovanni and Costantini, Giovanni},
+  journal   = {Telemedicine and e-Health},
+  volume    = {15},
+  number    = {3},
+  pages     = {296--299},
+  year      = {2009},
+  publisher = {Mary Ann Liebert, Inc. 140 Huguenot Street 3rd Floor New Rochelle, NY 10801 USA}
+}
+
+@article{o2021measuring,
+  title     = {Measuring Spinal Mobility Using an Inertial Measurement Unit System: A Reliability Study in Axial Spondyloarthritis},
+  author    = {O'Grady, Megan and O'Dwyer, Tom and Connolly, James and Condell, Joan and Esquivel, Karla Mu{\~n}oz and O'Shea, Finbar D and Gardiner, Philip and Wilson, Fiona},
+  journal   = {Diagnostics},
+  volume    = {11},
+  number    = {3},
+  pages     = {490},
+  year      = {2021},
+  publisher = {Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{hanke2016classification,
+  title        = {Classification of sensor errors for the statistical simulation of environmental perception in automated driving systems},
+  author       = {Hanke, Timo and Hirsenkorn, Nils and Dehlink, Bernhard and Rauch, Andreas and Rasshofer, Ralph and Biebl, Erwin},
+  booktitle    = {2016 IEEE 19th International Conference on Intelligent Transportation Systems (ITSC)},
+  pages        = {643--648},
+  year         = {2016},
+  organization = {IEEE}
+}
+
+@article{kaiser1977data,
+  title     = {Data smoothing using low-pass digital filters},
+  author    = {Kaiser, JF and Reed, WA},
+  journal   = {Review of Scientific Instruments},
+  volume    = {48},
+  number    = {11},
+  pages     = {1447--1457},
+  year      = {1977},
+  publisher = {American Institute of Physics}
+}
+
+@article{roylance1979batch,
+  title     = {A batch-fabricated silicon accelerometer},
+  author    = {Roylance, Lynn Michelle and Angell, James B},
+  journal   = {IEEE Transactions on Electron Devices},
+  volume    = {26},
+  number    = {12},
+  pages     = {1911--1917},
+  year      = {1979},
+  publisher = {IEEE}
+}
+
+@article{pons2019observers,
+  title     = {Observers with constant proper acceleration, constant proper Jerk, and beyond},
+  author    = {Pons, Josep M and de Palol, Ferran},
+  journal   = {General Relativity and Gravitation},
+  volume    = {51},
+  number    = {6},
+  pages     = {1--40},
+  year      = {2019},
+  publisher = {Springer}
+}
+
+@article{qazizada2016mobile,
+  title     = {Mobile robot controlling possibilities of inertial navigation system},
+  author    = {Qazizada, Mohammad Emal and Pivar{\v{c}}iov{\'a}, Elena},
+  journal   = {Procedia Engineering},
+  volume    = {149},
+  pages     = {404--413},
+  year      = {2016},
+  publisher = {Elsevier}
+}
+
+@inproceedings{marotto2013orientation,
+  title     = {Orientation analysis through a gyroscope sensor for indoor navigation systems},
+  author    = {Marotto, Valentina and Serra, Alberto and Carbouni, D and Sole, Mariella and Dessi, Tiziana and Manchinu, Andrea},
+  booktitle = {Proc. The Fourth International Conference on Sensor Device Technologies and Applications},
+  pages     = {85--90},
+  year      = {2013}
+}
+
+@article{zhuang2020introductory,
+  title     = {Introductory Chapter: Gyroscopes-Principles and Applications},
+  author    = {Zhuang, Xuye and Li, Pinghua and Li, Dongxing and Sui, Wentao},
+  journal   = {Gyroscopes: Principles and Applications},
+  pages     = {1},
+  year      = {2020},
+  publisher = {BoD--Books on Demand}
+}
+
+@article{antonello2012exploring,
+  title     = {Exploring the potential of MEMS gyroscopes: Successfully using sensors in typical industrial motion control applications},
+  author    = {Antonello, Riccardo and Oboe, Roberto},
+  journal   = {IEEE Industrial Electronics Magazine},
+  volume    = {6},
+  number    = {1},
+  pages     = {14--24},
+  year      = {2012},
+  publisher = {IEEE}
+}
+
+@article{passaro2017gyroscope,
+  title     = {Gyroscope technology and applications: A review in the industrial perspective},
+  author    = {Passaro, Vittorio and Cuccovillo, Antonello and Vaiani, Lorenzo and De Carlo, Martino and Campanella, Carlo Edoardo},
+  journal   = {Sensors},
+  volume    = {17},
+  number    = {10},
+  pages     = {2284},
+  year      = {2017},
+  publisher = {Multidisciplinary Digital Publishing Institute}
+}
+
+@article{antonello2011mems,
+  title   = {MEMS gyroscopes for consumer and industrial applications},
+  author  = {Antonello, Riccardo and Oboe, Roberto},
+  journal = {Microsensors, Intech},
+  pages   = {253--280},
+  year    = {2011}
+}
+
+@article{trusov2011overview,
+  title   = {Overview of MEMS gyroscopes: history, principles of operations, types of measurements},
+  author  = {Trusov, Alexander A},
+  journal = {University of California, Irvine, USA},
+  year    = {2011}
+}
+
+@article{caruso1998new,
+  title     = {A new perspective on magnetic field sensing},
+  author    = {Caruso, Michael J and Bratland, Tamara and Smith, Carl H and Schneider, Robert},
+  journal   = {SENSORS-PETERBOROUGH-},
+  volume    = {15},
+  pages     = {34--47},
+  year      = {1998},
+  publisher = {HELMERS PUBLISHING INC}
+}
+
+@article{silva2021error,
+  title     = {Error Analysis of Accelerometer-and Magnetometer-Based Stationary Alignment},
+  author    = {Silva, Felipe O and Paiva, Lucas PS and Carvalho, Gustavo S},
+  journal   = {Sensors},
+  volume    = {21},
+  number    = {6},
+  pages     = {2040},
+  year      = {2021},
+  publisher = {Multidisciplinary Digital Publishing Institute}
+}
+
+@article{wahdan2014three,
+  title     = {Three-dimensional magnetometer calibration with small space coverage for pedestrians},
+  author    = {Wahdan, Ahmed and Georgy, Jacques and Noureldin, Aboelmagd},
+  journal   = {IEEE Sensors Journal},
+  volume    = {15},
+  number    = {1},
+  pages     = {598--609},
+  year      = {2014},
+  publisher = {IEEE}
+}
+
+@article{wahdan2014magnetometer,
+  title     = {Magnetometer calibration for portable navigation devices in vehicles using a fast and autonomous technique},
+  author    = {Wahdan, Ahmed and Georgy, Jacques and Abdelfatah, Walid F and Noureldin, Aboelmagd},
+  journal   = {IEEE Transactions on Intelligent Transportation Systems},
+  volume    = {15},
+  number    = {5},
+  pages     = {2347--2352},
+  year      = {2014},
+  publisher = {IEEE}
+}
+
+@inproceedings{guo2008soft,
+  title        = {The soft iron and hard iron calibration method using extended Kalman filter for attitude and heading reference system},
+  author       = {Guo, Pengfei and Qiu, Haitao and Yang, Yunchun and Ren, Zhang},
+  booktitle    = {2008 IEEE/ION Position, Location and Navigation Symposium},
+  pages        = {1167--1174},
+  year         = {2008},
+  organization = {IEEE}
+}
+
+@inproceedings{caruso2000applications,
+  title        = {Applications of magnetic sensors for low cost compass systems},
+  author       = {Caruso, Michael J},
+  booktitle    = {IEEE 2000. Position location and navigation symposium (Cat. No. 00CH37062)},
+  pages        = {177--184},
+  year         = {2000},
+  organization = {IEEE}
+}
+
+@inproceedings{bachmann2004investigation,
+  title        = {An investigation of the effects of magnetic variations on inertial/magnetic orientation sensors},
+  author       = {Bachmann, Eric R and Yun, Xiaoping and Peterson, Christopher W},
+  booktitle    = {IEEE International Conference on Robotics and Automation, 2004. Proceedings. ICRA'04. 2004},
+  volume       = {2},
+  pages        = {1115--1122},
+  year         = {2004},
+  organization = {IEEE}
+}
+
+@article{roetenberg2005compensation,
+  title     = {Compensation of magnetic disturbances improves inertial and magnetic sensing of human body segment orientation},
+  author    = {Roetenberg, Daniel and Luinge, Henk J and Baten, Chris TM and Veltink, Peter H},
+  journal   = {IEEE Transactions on neural systems and rehabilitation engineering},
+  volume    = {13},
+  number    = {3},
+  pages     = {395--405},
+  year      = {2005},
+  publisher = {IEEE}
+}
+
+@inproceedings{daponte2017method,
+  title        = {Method for compensating the effect of disturbances on magnetometer measurements: experimental results},
+  author       = {Daponte, Pasquale and De Vito, Luca and Mazzilli, Gianluca and Picariello, Francesco and Rapuano, Sergio},
+  booktitle    = {2017 IEEE International Instrumentation and Measurement Technology Conference (I2MTC)},
+  pages        = {1--6},
+  year         = {2017},
+  organization = {IEEE}
+}
+
+@misc{bostrom2007definition,
+  title     = {On the definition of information fusion as a field of research},
+  author    = {Bostr{\"o}m, Henrik and Andler, Sten F and Brohede, Marcus and Johansson, Ronnie and Karlsson, Alexander and Van Laere, Joeri and Niklasson, Lars and Nilsson, Marie and Persson, Anne and Ziemke, Tom},
+  year      = {2007},
+  publisher = {Institutionen f{\"o}r kommunikation och information}
+}
+
+@inproceedings{borenstein2009heuristic,
+  title        = {Heuristic reduction of gyro drift in gyro-based vehicle tracking},
+  author       = {Borenstein, Johann and Ojeda, Lauro},
+  booktitle    = {Sensors, and Command, Control, Communications, and Intelligence (C3I) Technologies for Homeland Security and Homeland Defense VIII},
+  volume       = {7305},
+  pages        = {730507},
+  year         = {2009},
+  organization = {International Society for Optics and Photonics}
+}
+
+@phdthesis{hol2011sensor,
+  title  = {Sensor fusion and calibration of inertial sensors, vision, ultra-wideband and GPS},
+  author = {Hol, Jeroen D},
+  year   = {2011},
+  school = {Link{\"o}ping University Electronic Press}
+}
+
+@article{rodgers2014recent,
+  title     = {Recent advances in wearable sensors for health monitoring},
+  author    = {Rodgers, Mary M and Pai, Vinay M and Conroy, Richard S},
+  journal   = {IEEE Sensors Journal},
+  volume    = {15},
+  number    = {6},
+  pages     = {3119--3126},
+  year      = {2014},
+  publisher = {IEEE}
+}
+
+@article{majumder2017wearable,
+  title     = {Wearable sensors for remote health monitoring},
+  author    = {Majumder, Sumit and Mondal, Tapas and Deen, M Jamal},
+  journal   = {Sensors},
+  volume    = {17},
+  number    = {1},
+  pages     = {130},
+  year      = {2017},
+  publisher = {Multidisciplinary Digital Publishing Institute}
+}
+
+@article{altini2016cardiorespiratory,
+  title     = {Cardiorespiratory fitness estimation in free-living using wearable sensors},
+  author    = {Altini, Marco and Casale, Pierluigi and Penders, Julien and Amft, Oliver},
+  journal   = {Artificial intelligence in medicine},
+  volume    = {68},
+  pages     = {37--46},
+  year      = {2016},
+  publisher = {Elsevier}
+}
+
+@article{al2019remote,
+  title     = {Remote health monitoring of elderly through wearable sensors},
+  author    = {Al-Khafajiy, Mohammed and Baker, Thar and Chalmers, Carl and Asim, Muhammad and Kolivand, Hoshang and Fahim, Muhammad and Waraich, Atif},
+  journal   = {Multimedia Tools and Applications},
+  volume    = {78},
+  number    = {17},
+  pages     = {24681--24706},
+  year      = {2019},
+  publisher = {Springer}
+}
+
+@article{ermes2008detection,
+  title     = {Detection of daily activities and sports with wearable sensors in controlled and uncontrolled conditions},
+  author    = {Ermes, Miikka and P{\"a}rkk{\"a}, Juha and M{\"a}ntyj{\"a}rvi, Jani and Korhonen, Ilkka},
+  journal   = {IEEE transactions on information technology in biomedicine},
+  volume    = {12},
+  number    = {1},
+  pages     = {20--26},
+  year      = {2008},
+  publisher = {IEEE}
+}
+
+@inproceedings{morris2008wearable,
+  title        = {Wearable sensors for monitoring sports performance and training},
+  author       = {Morris, Deirdre and Schazmann, Benjamin and Wu, Yangzhe and Coyle, Shirley and Brady, Sarah and Hayes, Jer and Slater, Conor and Fay, Cormac and Lau, King Tong and Wallace, Gordon and others},
+  booktitle    = {2008 5th International Summer School and Symposium on Medical Devices and Biosensors},
+  pages        = {121--124},
+  year         = {2008},
+  organization = {IEEE}
+}
+
+@article{rum2021wearable,
+  title     = {Wearable sensors in sports for persons with disability: a systematic review},
+  author    = {Rum, Lorenzo and Sten, Oscar and Vendrame, Eleonora and Belluscio, Valeria and Camomilla, Valentina and Vannozzi, Giuseppe and Truppa, Luigi and Notarantonio, Marco and Sciarra, Tommaso and Lazich, Aldo and others},
+  journal   = {Sensors},
+  volume    = {21},
+  number    = {5},
+  pages     = {1858},
+  year      = {2021},
+  publisher = {Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{heinz2006using,
+  title        = {Using wearable sensors for real-time recognition tasks in games of martial arts-an initial experiment},
+  author       = {Heinz, Ernst A and Kunze, Kai S and Gruber, Matthias and Bannach, David and Lukowicz, Paul},
+  booktitle    = {2006 IEEE Symposium on Computational Intelligence and Games},
+  pages        = {98--102},
+  year         = {2006},
+  organization = {IEEE}
+}
+
+@article{mortazavi2013near,
+  title     = {Near-realistic mobile exergames with wireless wearable sensors},
+  author    = {Mortazavi, Bobak and Nyamathi, Suneil and Lee, Sunghoon Ivan and Wilkerson, Thomas and Ghasemzadeh, Hassan and Sarrafzadeh, Majid},
+  journal   = {IEEE Journal of Biomedical and Health Informatics},
+  volume    = {18},
+  number    = {2},
+  pages     = {449--456},
+  year      = {2013},
+  publisher = {IEEE}
+}
+
+@article{cao2019wearable,
+  title     = {Wearable sensors and equipment in VR games: a review},
+  author    = {Cao, Mingliang and Xie, Tianhua and Chen, Zebin},
+  journal   = {Transactions on Edutainment XV},
+  pages     = {3--12},
+  year      = {2019},
+  publisher = {Springer}
+}
+
+@article{treffers2016position,
+  title  = {Position and orientation determination of a probe with use of the IMU MPU9250 and a ATmega328 microcontroller},
+  author = {Treffers, Charlote and van Wietmarschen, Luc},
+  year   = {2016}
+}
+
+@book{tollervey2017programming,
+  title     = {Programming with MicroPython: embedded programming with microcontrollers and Python},
+  author    = {Tollervey, Nicholas H},
+  year      = {2017},
+  publisher = {" O'Reilly Media, Inc."}
+}
+
+@inproceedings{khamphroo2017micropython,
+  title        = {MicroPython-based educational mobile robot for computer coding learning},
+  author       = {Khamphroo, Matenat and Kwankeo, Natavut and Kaemarungsi, Kamol and Fukawa, Kazuhiko},
+  booktitle    = {2017 8th International Conference of Information and Communication Technology for Embedded Systems (IC-ICTES)},
+  pages        = {1--6},
+  year         = {2017},
+  organization = {IEEE}
+}
+
+@article{aggarwal2008standard,
+  title     = {A standard testing and calibration procedure for low cost MEMS inertial sensors and units},
+  author    = {Aggarwal, P and Syed, Zainab and Niu, Xiaoji and El-Sheimy, Naser},
+  journal   = {The Journal of Navigation},
+  volume    = {61},
+  number    = {2},
+  pages     = {323--336},
+  year      = {2008},
+  publisher = {Cambridge University Press}
+}
+
+@article{won2009triaxial,
+  title     = {A triaxial accelerometer calibration method using a mathematical model},
+  author    = {Won, Seong-hoon Peter and Golnaraghi, Farid},
+  journal   = {IEEE transactions on instrumentation and measurement},
+  volume    = {59},
+  number    = {8},
+  pages     = {2144--2153},
+  year      = {2009},
+  publisher = {IEEE}
+}
+
+@inproceedings{olivares2009high,
+  title        = {High-efficiency low-cost accelerometer-aided gyroscope calibration},
+  author       = {Olivares, Alberto and Olivares, Gonzalo and Gorriz, JM and Ramirez, J},
+  booktitle    = {2009 International Conference on Test and Measurement},
+  volume       = {1},
+  pages        = {354--360},
+  year         = {2009},
+  organization = {IEEE}
+}
+
+@article{kok2016magnetometer,
+  title     = {Magnetometer calibration using inertial sensors},
+  author    = {Kok, Manon and Sch{\"o}n, Thomas B},
+  journal   = {IEEE Sensors Journal},
+  volume    = {16},
+  number    = {14},
+  pages     = {5679--5689},
+  year      = {2016},
+  publisher = {IEEE}
 }
